fix: remove spacing from table outer border

--- a/packages/components/table/src/styles/index.module.scss
+++ b/packages/components/table/src/styles/index.module.scss
@@ -43,6 +43,7 @@
   @include text-base;
 
   width: 100%;
+  border-collapse: collapse;
 
   thead th {
     text-align: start;
